--- a/ijvm_interpreter_rs/Cargo.toml
+++ b/ijvm_interpreter_rs/Cargo.toml
@@ -3,6 +3,10 @@ name = "ijvm_interpreter_rs"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "ijvm_interpreter_rs"
+crate-type = ["staticlib", "lib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
