--- a/ijvm_interpreter_rs/Cargo.toml
+++ b/ijvm_interpreter_rs/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [lib]
 name = "ijvm_interpreter_rs"
-crate-type = ["staticlib", "lib"]
+crate-type = ["lib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
