--- a/ijvm_step_viewer/CMakeLists.txt
+++ b/ijvm_step_viewer/CMakeLists.txt
@@ -15,10 +15,10 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 set(TS_FILES ijvm_step_viewer_it_IT.ts)
 
 set(PROJECT_SOURCES
-        main.cpp
-        mainwindow.cpp
-        mainwindow.h
-        mainwindow.ui
+        src/main.cpp
+        src/mainwindow.cpp
+        src/mainwindow.h
+        layout/mainwindow.ui
         ${TS_FILES}
 )
 
