--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+/**/.directory
 /**/target/
 /ijvm_cpp_wrapper/Cargo.lock
 /ijvm_interpreter_rs/Cargo.lock
 /ijvm_cpp_wrapper/target/debug/.cargo-lock
 /ijvm_interpreter_rs/target/debug/.cargo-lock
+/ijvm_inspector/ijvm_cpp_wrapper.h
+/**/*.a
+/**/*.dll
